fixed chart wrap issue

--- a/src/theme/styles/_common.scss
+++ b/src/theme/styles/_common.scss
@@ -323,7 +323,7 @@ ngx-intl-tel-input {
 
 .chart-wrap {
     overflow-x: auto;
-    & > div {
-        min-width: 968px;
-    }
+    // & > div {
+    //     min-width: 968px;
+    // }
 }
